D3DRenderer.h & D3DWrapper.cpp 追加

--- a/D3DRenderer/D3DRenderer.vcxproj
+++ b/D3DRenderer/D3DRenderer.vcxproj
@@ -382,10 +382,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D3DRenderer.cpp" />
+    <ClCompile Include="D3DWrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="D3DRenderer.h" />
     <CLInclude Include="resource.h" />
     <ResourceCompile Include="D3DRenderer.rc" />
   </ItemGroup>
