refs #8 WPFD3DViewer の参照に D3DRenderer 追加

--- a/D3DImageTutorial/WPFD3DViewer/WPFD3DViewer.csproj
+++ b/D3DImageTutorial/WPFD3DViewer/WPFD3DViewer.csproj
@@ -93,6 +93,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\D3DRenderer\D3DRenderer.vcxproj">
+      <Project>{d3d09006-96d0-4629-88b8-122c0256058c}</Project>
+      <Name>D3DRenderer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
