--- a/D3DImageTutorial/WPFD3DViewer/WPFD3DViewer.csproj
+++ b/D3DImageTutorial/WPFD3DViewer/WPFD3DViewer.csproj
@@ -86,6 +86,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Content Include="tiger.x">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -95,6 +98,11 @@
       <Project>{d3d09006-96d0-4629-88b8-122c0256058c}</Project>
       <Name>D3DRenderer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="tiger.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
